--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "zanysoft/laravel-widgets",
     "description": "A powerful alternative to view composers. Asynchronous widgets, reloadable widgets, console generator, caching - everything you can think of.",
     "license": "MIT",
-    "keywords": ["laravel", "widgets", "ajax"],
+    "keywords": ["laravel", "widgets", "alert", "notification", "errors",  "ajax"],
+    "homepage": "http://www.zanysoft.co",
     "authors": [
         {
             "name": "Mubashar Ahmad",
