--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "zanysoft/laravel-widgets",
-  "description": "A powerful alternative to view composers. Asynchronous widgets, reloadable widgets, console generator, caching - everything you can think of.",
+  "description": "Asynchronous widgets, reloadable widgets, console generator, caching - everything you can think of.",
   "license": "MIT",
   "keywords": [
     "laravel",
@@ -10,22 +10,17 @@
     "html",
     "ajax"
   ],
-  "homepage": "http://www.zanysoft.co",
   "authors": [
     {
-      "name": "Mubashar Ahmad",
-      "email": "info@zanysoft.co"
+      "name": "Zany Soft",
+      "email": "info@zanysoft.net",
+      "homepage": "https://github.com/zanysoft"
     }
   ],
   "homepage": "https://github.com/zanysoft/laravel-widgets",
   "require": {
-    "php": ">=7.0",
-    "illuminate/support": ">=5.5",
-    "illuminate/contracts": ">=5.5",
-    "illuminate/view": ">=5.5",
-    "illuminate/container": ">=5.5",
-    "illuminate/console": ">=5.5",
-    "illuminate/cache": ">=5.5"
+    "php": ">=7.4",
+    "illuminate/support": "^6.0|^7.0|^8.0|^9.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0"
@@ -50,5 +45,8 @@
         "AsyncWidget": "ZanySoft\\Widgets\\AsyncFacade"
       }
     }
+  },
+  "scripts": {
+    "test": "phpunit"
   }
 }
